# ElevatorSystem

./: .gitignore  LICENSE  README.md
examples/cli/: CMakeLists.txt  main.c
inc/: elevator.h  elevator_cli.h  elevator_config.h
src/: elevator.c  elevator_cli.c
tests/: CMakeLists.txt  test_cases.c
